Fix CSS bleeding over .btn

--- a/styles/NavigationComponent.css
+++ b/styles/NavigationComponent.css
@@ -1,4 +1,4 @@
-.btn {
+.mapillary-js .btn {
     border: none;
     background-color: transparent;
     cursor: pointer;
